@@ -1,3 +1,4 @@
+12/10/13 implement view-specific properties using axon.PropertySet
 12/10/13 add view properties for graph switches, add to 'Reset All'
 12/10/13 compute scale height and layout of graphs
 12/10/13 Custom: add log/linear switch to graph
